--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<img width="80%" src="motherlove.jpg">
 	<img width="60%" src="flower.jpg">
         <img width="60%" src="tajmahal.jpg">
+	<img width="40%" src="bird.jpeg">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/HteQt1mkRfM?si=qbuHNW0VCQGvc_qR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZxhYHdf_xbc?si=5bEo1u9kpmKSQBAV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/EfgeJGM22Fk?si=3GXUDkKRk1EmxB8B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
